--- a/proj_1/fresh_tomatoes.html
+++ b/proj_1/fresh_tomatoes.html
@@ -106,7 +106,7 @@
       
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="ANWzJ19yEuY" data-toggle="modal" data-target="#trailer">
     <img src="https://upload.wikimedia.org/wikipedia/zh/thumb/d/d6/Kiminona.jpg/340px-Kiminona.jpg" width="220" height="342">
-    <h2>你的名字</h2>
+    <h2>Your Name</h2>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="Xk_LRcOFT0c" data-toggle="modal" data-target="#trailer">
@@ -120,7 +120,7 @@
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="13EUXqIwDkQ" data-toggle="modal" data-target="#trailer">
-    <img src="https://upload.wikimedia.org/wikipedia/zh/3/3a/The_Good，the_bad_and_the_ugly.jpg" width="220" height="342">
+    <img src="https://upload.wikimedia.org/wikipedia/en/4/45/Good_the_bad_and_the_ugly_poster.jpg" width="220" height="342">
     <h2>The good, the Bad and the Ugly</h2>
 </div>
 
