finish project 2 main frame

--- a/proj_2/index.html
+++ b/proj_2/index.html
@@ -21,9 +21,41 @@
       </div>
     </div>
     <!-- Line Separator -->
+    <div class="row">
+      <div class="col-md-12">
+        <hr>
+      </div>
+    </div>
     <!-- Main Picture -->
+    <div class="row">
+      <div class="col-md-12">
+        <img class="img-responsive" src="images/middle.jpg" alt="Picture Descriptioin">
+      </div>
+    </div>
     <!-- Featured Work -->
+    <div class="row">
+      <div class="col-md-12">
+        <h2>Featured Work</h2>
+      </div>
+    </div>
     <!-- Works -->
+    <div class="row">
+      <div class="col-md-4">
+        <img class="img-responsive" src="images/small.jpg" alt="Picture description">
+        <h4 class="text-center">Work Name</h4>
+        <p class="text-center">http://xxx.github.com</p>
+      </div>
+      <div class="col-md-4">
+        <img class="img-responsive" src="images/small.jpg" alt="Picture description">
+        <h4 class="text-center">Work Name</h4>
+        <p class="text-center">http://xxx.github.com</p>
+      </div>
+      <div class="col-md-4">
+        <img class="img-responsive" src="images/small.jpg" alt="Picture description">
+        <h4 class="text-center">Work Name</h4>
+        <p class="text-center">http://xxx.github.com</p>
+      </div>
+    </div>
   </div>
 </body>
 </html>
