--- a/proj_2/index.html
+++ b/proj_2/index.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <!-- Character Set -->
   <meta charset="utf-8">
   <!-- Make clear what the following line means -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Bootstrap CSS File -->
-  <link rel="stylesheet" href="css/bootstrap.css" />
+  <link rel="stylesheet" href="css/bootstrap.css"/>
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css?family=Lato:100,300" rel="stylesheet">
+  <!-- Self-def CSS File -->
+  <link rel="stylesheet" href="css/style.css"/>
   <title>Hanying Profile</title>
 </head>
 <body>
   <div class="container">
-    <!-- Name Section -->
-    <div class="row">
+    <!-- Icon & Name Section -->
+    <div class="row logo-title">
       <div class="col-md-6">
         <img src="http://placehold.it/100x100" alt="Picture description">
       </div>
       <div class="col-md-6 text-right text-uppercase">
-        <h1>Name</h1>
-        <h3>Description</h3>
+        <h1 class="font-thin title-super">Name</h1>
+        <h4>Description</h4>
       </div>
     </div>
     <!-- Line Separator -->
@@ -34,7 +39,7 @@
     </div>
     <!-- Featured Work -->
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-md-12 text-color-light">
         <h2>Featured Work</h2>
       </div>
     </div>
@@ -42,17 +47,17 @@
     <div class="row">
       <div class="col-md-4">
         <img class="img-responsive" src="images/small.jpg" alt="Picture description">
-        <h4 class="text-center">Work Name</h4>
+        <h2 class="text-center">Work Name</h2>
         <p class="text-center">http://xxx.github.com</p>
       </div>
       <div class="col-md-4">
         <img class="img-responsive" src="images/small.jpg" alt="Picture description">
-        <h4 class="text-center">Work Name</h4>
+        <h2 class="text-center">Work Name</h2>
         <p class="text-center">http://xxx.github.com</p>
       </div>
       <div class="col-md-4">
         <img class="img-responsive" src="images/small.jpg" alt="Picture description">
-        <h4 class="text-center">Work Name</h4>
+        <h2 class="text-center">Work Name</h2>
         <p class="text-center">http://xxx.github.com</p>
       </div>
     </div>
