--- a/proj_2/index.html
+++ b/proj_2/index.html
@@ -17,8 +17,9 @@
   <div class="container">
     <!-- Icon & Name Section -->
     <div class="row logo-title">
-      <div class="col-md-6">
-        <img src="http://placehold.it/100x100" alt="Picture description">
+      <div class="col-md-6 unicode-large">
+        <!--img src="http://placehold.it/100x100" alt="Picture description"-->
+        &#10032;&#10026;
       </div>
       <div class="col-md-6 text-right text-uppercase">
         <h1 class="font-thin title-super">Name</h1>
