change to meaningful pictures

--- a/proj_2/index.html
+++ b/proj_2/index.html
@@ -15,53 +15,59 @@
 </head>
 <body>
   <div class="container">
-    <!-- Icon & Name Section -->
-    <div class="row logo-title">
-      <div class="col-md-6 unicode-large">
-        <!--img src="http://placehold.it/100x100" alt="Picture description"-->
-        &#10032;&#10026;
+    <header>
+      <div class="row logo-title">
+        <div class="col-md-6 unicode-large color-blue">
+          &#10032;
+        </div>
+        <div class="col-md-6 text-right text-uppercase">
+          <h1 class="font-thin title-super">Zhang Hanying</h1>
+          <h4>Full stack learner</h4>
+        </div>
       </div>
-      <div class="col-md-6 text-right text-uppercase">
-        <h1 class="font-thin title-super">Name</h1>
-        <h4>Description</h4>
+    </header>
+    <section>
+      <!-- Line Separator -->
+      <div class="row separator">
+        <div class="col-md-12">
+        </div>
       </div>
-    </div>
-    <!-- Line Separator -->
-    <div class="row">
-      <div class="col-md-12">
-        <hr>
+    </section>
+    <section class="main">
+      <!-- Main Picture -->
+      <div class="row">
+        <div class="col-md-12">
+          <img class="img-responsive image-project" src="images/fullstack.jpg" alt="Picture Description">
+        </div>
       </div>
-    </div>
-    <!-- Main Picture -->
-    <div class="row">
-      <div class="col-md-12">
-        <img class="img-responsive" src="images/middle.jpg" alt="Picture Descriptioin">
+    </section>
+    <section class="featured-work">
+      <!-- Featured Work Title -->
+      <div class="row">
+        <div class="col-md-12 color-light">
+          <h2>Featured Work</h2>
+        </div>
       </div>
-    </div>
-    <!-- Featured Work -->
-    <div class="row">
-      <div class="col-md-12 text-color-light">
-        <h2>Featured Work</h2>
+      <!-- Featured Works -->
+      <div class="row">
+        <div class="col-md-4">
+          <img class="img-responsive image-project" src="images/movie.jpg" alt="Picture description">
+          <h2 class="text-center">Project 1</h2>
+          <p class="text-center">Movie Trailer Website</p>
+        </div>
+        <div class="col-md-4">
+          <img class="img-responsive image-project" src="images/portfolio.jpg" alt="Picture description">
+          <h2 class="text-center">Project 2</h2>
+          <p class="text-center">Build a Portfolio</p>
+        </div>
+        <div class="col-md-4">
+          <img class="img-responsive image-project" src="images/blogs.jpg" alt="Picture description">
+          <h2 class="text-center">Project 3</h2>
+          <p class="text-center">Multi User Blog</p>
+        </div>
       </div>
-    </div>
-    <!-- Works -->
-    <div class="row">
-      <div class="col-md-4">
-        <img class="img-responsive" src="images/small.jpg" alt="Picture description">
-        <h2 class="text-center">Work Name</h2>
-        <p class="text-center">http://xxx.github.com</p>
-      </div>
-      <div class="col-md-4">
-        <img class="img-responsive" src="images/small.jpg" alt="Picture description">
-        <h2 class="text-center">Work Name</h2>
-        <p class="text-center">http://xxx.github.com</p>
-      </div>
-      <div class="col-md-4">
-        <img class="img-responsive" src="images/small.jpg" alt="Picture description">
-        <h2 class="text-center">Work Name</h2>
-        <p class="text-center">http://xxx.github.com</p>
-      </div>
-    </div>
+    </section>
+    <footer></footer>
   </div>
 </body>
 </html>
