--- a/proj_2/index.html
+++ b/proj_2/index.html
@@ -37,7 +37,7 @@
       <!-- Main Picture -->
       <div class="row">
         <div class="col-md-12">
-          <img class="img-responsive image-project" src="images/fullstack.jpg" alt="Picture Description">
+          <img class="img-responsive image" src="images/fullstack.jpg" alt="A picture showing">
         </div>
       </div>
     </section>
@@ -51,17 +51,17 @@
       <!-- Featured Works -->
       <div class="row">
         <div class="col-md-4">
-          <img class="img-responsive image-project" src="images/movie.jpg" alt="Picture description">
+          <img class="img-responsive image-work" src="images/movie.jpg" alt="A picture of theatre">
           <h2 class="text-center">Project 1</h2>
           <p class="text-center">Movie Trailer Website</p>
         </div>
         <div class="col-md-4">
-          <img class="img-responsive image-project" src="images/portfolio.jpg" alt="Picture description">
+          <img class="img-responsive image-work" src="images/portfolio.jpg" alt="A picture of metal">
           <h2 class="text-center">Project 2</h2>
           <p class="text-center">Build a Portfolio</p>
         </div>
         <div class="col-md-4">
-          <img class="img-responsive image-project" src="images/blogs.jpg" alt="Picture description">
+          <img class="img-responsive image-work" src="images/blogs.jpg" alt="A picture of cards">
           <h2 class="text-center">Project 3</h2>
           <p class="text-center">Multi User Blog</p>
         </div>
