try using scrset

--- a/proj_2/index.html
+++ b/proj_2/index.html
@@ -37,7 +37,9 @@
       <!-- Main Picture -->
       <div class="row">
         <div class="col-md-12">
-          <img class="img-responsive image" src="images/fullstack.jpg" alt="fullstack techniques">
+          <img class="img-responsive image"
+            src="images/fullstack.jpg"
+            alt="fullstack techniques">
         </div>
       </div>
     </section>
@@ -61,7 +63,10 @@
           <p class="text-center">Build a Portfolio</p>
         </div>
         <div class="col-md-4">
-          <img class="img-responsive image-work" src="images/blogs.jpg" alt="word 'blogs'">
+          <img class="img-responsive image-work"
+            src="images/blogs.jpg"
+            alt="word 'blogs'"
+            srcset="images/blogs-hd.jpg 2x">
           <h2 class="text-center">Project 3</h2>
           <p class="text-center">Multi User Blog</p>
         </div>
