correct a spelling mistake

--- a/proj_2/index.html
+++ b/proj_2/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:100,300" rel="stylesheet">
   <!-- Self-def CSS File -->
   <link rel="stylesheet" href="css/style.css"/>
-  <title>Hanying Profile</title>
+  <title>Hanying portfolio</title>
 </head>
 <body>
   <div class="container">
