improve code according to review results

--- a/proj_2/index.html
+++ b/proj_2/index.html
@@ -6,73 +6,76 @@
   <!-- Make clear what the following line means -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Bootstrap CSS File -->
-  <link rel="stylesheet" href="css/bootstrap.css"/>
+  <link rel="stylesheet" href="css/bootstrap.css">
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css?family=Lato:100,300" rel="stylesheet">
   <!-- Self-def CSS File -->
-  <link rel="stylesheet" href="css/style.css"/>
+  <link rel="stylesheet" href="css/style.css">
   <title>Hanying portfolio</title>
 </head>
+
 <body>
   <div class="container">
-    <header>
-      <div class="row logo-title">
-        <div class="col-md-6 unicode-large color-blue">
-          &#10032;
-        </div>
-        <div class="col-md-6 text-right text-uppercase">
-          <h1 class="font-thin title-super">Zhang Hanying</h1>
-          <h4>Full stack learner</h4>
-        </div>
+    <!-- Header -->
+    <header class="row logo-title">
+      <div class="col-md-6 unicode-large color-blue">
+        &#10032;
+      </div>
+
+      <div class="col-md-6 text-right text-uppercase">
+        <h1 class="font-thin title-super">Zhang Hanying</h1>
+        <h4>Full stack learner</h4>
       </div>
     </header>
-    <section>
-      <!-- Line Separator -->
-      <div class="row separator">
-        <div class="col-md-12">
-        </div>
+
+    <!-- Line Separator -->
+    <section class="row separator">
+      <div class="col-md-12">
       </div>
     </section>
-    <section class="main">
-      <!-- Main Picture -->
+    
+    <!-- Main Picture -->
+    <section class="main-picture">
       <div class="row">
         <div class="col-md-12">
-          <img class="img-responsive image"
+          <img class="img-responsive"
             src="images/fullstack.jpg"
             alt="fullstack techniques">
         </div>
       </div>
     </section>
-    <section class="featured-work">
-      <!-- Featured Work Title -->
-      <div class="row">
+    
+    <!-- Main -->
+    <main class="main">
+      <section class="row featured-work">
+        <!-- Featured Work Title -->
         <div class="col-md-12 color-light">
           <h2>Featured Work</h2>
         </div>
-      </div>
-      <!-- Featured Works -->
-      <div class="row">
-        <div class="col-md-4">
+
+        <!-- Featured Works -->
+        <article class="col-md-4">
           <img class="img-responsive image-work" src="images/movie.jpg" alt="a theater">
           <h2 class="text-center">Project 1</h2>
           <p class="text-center">Movie Trailer Website</p>
-        </div>
-        <div class="col-md-4">
+        </article>
+
+        <article class="col-md-4">
           <img class="img-responsive image-work" src="images/portfolio.jpg" alt="a sculpture of word 'portfolio'">
           <h2 class="text-center">Project 2</h2>
           <p class="text-center">Build a Portfolio</p>
-        </div>
-        <div class="col-md-4">
+        </article>
+
+        <article class="col-md-4">
           <img class="img-responsive image-work"
             src="images/blogs.jpg"
             alt="word 'blogs'"
             srcset="images/blogs-hd.jpg 2x">
           <h2 class="text-center">Project 3</h2>
           <p class="text-center">Multi User Blog</p>
-        </div>
-      </div>
-    </section>
-    <footer></footer>
+        </article>
+      </section>
+    </main>
   </div>
 </body>
 </html>
