proj_6: highlight marker when click address in list

--- a/proj_6/index.html
+++ b/proj_6/index.html
@@ -15,7 +15,7 @@
 
           <ul data-bind="foreach: locations">
             <li>
-            <span data-bind="text: title"></span>
+            <span data-bind="text: title, click: $parent.highlightMarker"></span>
             </li>
           </ul>
 
