--- a/proj_6/index.html
+++ b/proj_6/index.html
@@ -1,35 +1,33 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link rel="stylesheet" href="static/style.css">
-  </head>
-  <body>
-    <div class="container">
-      <div class="options-box">
-        <h1>Find Your New NYC Home</h1>
-        <div>
-          <span class="text">Search for nearby places</span>
-          <input id="places-search" type="text" placeholder="Ex: Pizza delivery in NYC">
-          <input id="go-places" type="button" value="Filter">
+    <head>
+        <link rel="stylesheet" href="static/style.css">
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+    </head>
 
-
-          <ul data-bind="foreach: locations">
-            <li>
-            <span data-bind="text: title, click: $parent.highlightMarker"></span>
-            </li>
-          </ul>
-
-
+    <body>
+        <div class="container">
+            <!-- Left Menu -->
+            <div class="options-box">
+                <h1>Find Your New NYC Home</h1>
+                <div>
+                    <span class="text">Search for nearby places</span>
+                    <input id="places-search" type="text" placeholder="Ex: Pizza delivery in NYC">
+                    <input id="go-places" type="button" value="Filter">
+                    <ul data-bind="foreach: locations">
+                        <li>
+                            <span data-bind="text: title, click: $parent.highlightMarker"></span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <!-- Map -->
+            <div id="map"></div>
         </div>
-      </div>
-      <div id="map"></div>
-    </div>
     
+        <script type="text/javascript" src="js/knockout-3.4.2.js"></script>
+        <script type="text/javascript" src="js/viewModel.js"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?libraries=places,geometry,drawing&key=AIzaSyCw5wyNOIlzra_Rv4RmIvwHjq0w6oK93vo&v=3&callback=initMap"></script>
 
-    <script type="text/javascript" src="js/knockout-3.4.2.js"></script>
-    <script type="text/javascript" src="js/viewModel.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?libraries=places,geometry,drawing&key=AIzaSyCw5wyNOIlzra_Rv4RmIvwHjq0w6oK93vo&v=3&callback=initMap"></script>
-
-
-  </body>
+    </body>
 </html>
