proj_6: list now can be filtered

--- a/proj_6/index.html
+++ b/proj_6/index.html
@@ -9,9 +9,9 @@
         <div class="container">
             <!-- Left Menu -->
             <div class="options-box">
-                <h3>Find Your New NYC Home</h3>
+                <h3>Landmarks of Beijing</h3>
                 <div>
-                    <input id="places-search" type="text" placeholder="Ex: Pizza delivery in NYC">
+                    <input id="places-search" type="text" placeholder="Ex: Forbidden City">
                     <input type="button" value="Filter" data-bind="click: filterLocations">
                     <ul data-bind="foreach: locationList">
                         <li>
