proj_6: TODO: error handling

--- a/proj_6/index.html
+++ b/proj_6/index.html
@@ -21,7 +21,7 @@
         </div>
         <!-- Map -->
         <div id="menuBar">
-            <a href="#menu" id="menu">
+            <a href="#menu" id="menu" data-bind="click: toggleLeftPanel">
                 &#9776;
             </a>
         </div>
